--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -1,20 +1,25 @@
-name: Build and Compile .NET Project
+name: Build and Test
+
 on:
   push:
+    branches:
+      - master
+  pull_request:
     branches:
       - master
 
 jobs:
   build:
-    name: Build and Compile
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - name: Setup .NET Core SDK ${{ matrix.dotnet-version }}
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: ${{ matrix.dotnet-version }}
-      - name: Install dependencies
-        run: dotnet restore JailbreakPDA/JailbreakPDA.csproj
-      - name: Build
-        run: dotnet build JailbreakPDA/JailbreakPDA.csproj --configuration Release 
+    - uses: actions/checkout@v3
+
+    - name: Setup .NET Core
+      uses: actions/setup-dotnet@v2
+      with:
+        dotnet-version: '2.0.0'
+
+    - name: Build with dotnet
+      run: dotnet build JailbreakPDA/JailbreakPDA.csproj --configuration Release --no-restore
+
